--- a/package.json
+++ b/package.json
@@ -17,5 +17,5 @@
     "eject": "react-scripts eject",
     "deploy": "gh-pages -d build"
   },
-  "homepage": "https://maksimsemenov.github.io/search"
+  "homepage": "https://maksimsemenov.github.io/infoarmor-search"
 }
